--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
         <div class="mini-menu">
             Menu...
         </div>
-        <div class="nav-item">
-            <a class="a-item" title="Knowledge" href="#knowledge">Knowledge</a>
-        </div>
-        <div class="nav-item">
-            <a class="a-item" title="Skills" href="#skills">Skills</a>
-        </div>
-        <div class="nav-item">
-            <a class="a-item" title="Biography" href="#biography">Biography</a>
-        </div>
-        <div class="nav-item">
-            <a class="a-item" title="Contacts" href="#contacts">Contacts</a>
-        </div>
+        <a class="a-item" title="Knowledge" href="#knowledge">
+            <div class="nav-item">Knowledge</div>
+        </a>
+        <a class="a-item" title="Skills" href="#skills">
+            <div class="nav-item">Skills</div>
+        </a>
+        <a class="a-item" title="Biography" href="#biography">
+            <div class="nav-item">Biography</div>
+        </a>
+        <a class="a-item" title="Contacts" href="#contacts">
+            <div class="nav-item">Contacts</div>
+        </a>
+
     </div>
 </div>
 
@@ -164,7 +165,6 @@
         </div>
      </section>
 </div>
-
 
 <script src="script.js"></script>
 
